# skylar

./: .env  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml
.github/workflows/: release.yml
src/: app.rs  logging.rs  main.rs  models.rs
src/app/: events.rs  metrics.rs  mod.rs  render.rs  state.rs  system.rs  tabs.rs  tasks.rs
src/db/: connection.rs  ddl.rs  mod.rs  models.rs
src/db/models/: cache.rs  devices.rs  mod.rs  timeseries.rs  users.rs
