[package]
name = "skylar"
version = "0.1.0"
edition = "2021"

[dependencies]
tracing = { version = "0.1.37", default-features = false }
tokio = { version = "1.20.1", features = ["full"] }
tokio-retry = "0.3.0"
futures = "0.3.30"
tracing-subscriber = { version = "0.3.17", features = ["env-filter", "json"] }
thiserror = "1.0.32"
anyhow = "1.0.44"
dotenv = "0.15.0"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.83"
derive_builder = "0.20.0"
derive_more = { version = "1.0.0", features = ["full"] }
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
scylla = { version = "0.14.0", features = ["full-serialization"] }
rand = "0.8.5"
ratatui = "0.28.0"
color-eyre = "0.6.3"
uuid = { version = "1.10.0", features = ["v4"] }
once_cell = "1.8.0"
rand_distr = "0.4.3"
strum = "0.26.3"
sysinfo = "0.32.0"